--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'application'
+    id 'java-library'
     id 'checkstyle'
     id 'jacoco'
 }
@@ -29,11 +29,6 @@ testing {
 
 compileJava {
     options.release = 17
-}
-
-application {
-    // Define the main class for the application.
-    mainClass = 'hexlet.code.App'
 }
 
 test {
